Fix history icon and checkbox alignment

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -524,6 +524,7 @@
   }
 
   .p-icon--history {
+    @extend %icon;
     @include snapcraft-icon-history($color-dark);
   }
 }
